--- a/utils/resources/galleryConfig.ini
+++ b/utils/resources/galleryConfig.ini
@@ -6,19 +6,19 @@
     cache_expiration    = 0             ; Cache expiration time in minutes
                                         ; Set to -1 for permanent caching
 
-    enable_pagination   = false         ; Set to 'true' to enable pagination
+    enable_pagination   = true         ; Set to 'true' to enable pagination
 
     paginator_threshold = 10            ; Maximum number of pages to display
                                         ; in the paginator before truncating
 
-    thumbnail_width     = 220           ; Thumbnail width (in pixels)
+    thumbnail_width     = 300           ; Thumbnail width (in pixels)
 
-    thumbnail_height    = 220           ; Thumbnail height (in pixels)
+    thumbnail_height    = 225              ; Thumbnail height (in pixels)
 
-    thumbnail_quality   = 75            ; Thumbnail quality from 1 - 100
+    thumbnail_quality   = 100            ; Thumbnail quality from 1 - 100
                                         ; Higher = better quality / slower
 
-    theme_name          = uber-ren     ; Theme used to style the gallery
+    theme_name          = uber-responsive     ; Theme used to style the gallery
 
 
 [advanced_settings]
